# mqt

./: .gitignore  Cargo.toml  README.md  build_android.sh  build_run_wasm4.sh  build_run_windows.sh  cart.wasm  index.html
.cargo/: config.toml
assets/: gamepad.aseprite  kitty-ss.ase
bevy_plat/: Cargo.toml
bevy_plat/src/: main.rs
kittygame/: Cargo.toml
kittygame/src/: kitty_ss.rs  lib.rs  multiplatform_defs.rs  spritesheet.rs  title_ss.rs
kittygame/src/game/: collision.rs  game_constants.rs  game_state.rs  music.rs
macroquad_plat/: Cargo.toml  build_run_macroquad_wasm.sh
macroquad_plat/src/: main.rs
mqt/: Cargo.toml
mqt/src/: main.rs
src/: main.rs
wasm4_plat/: Cargo.toml  kitty-ss_data.txt
wasm4_plat/src/: kitty_ss.rs  lib.rs  title_ss.rs
