
[workspace]
members = [
    "macroquad_plat",
    "wasm4_plat",
    "kittygame",
]
default-members = [
    "macroquad_plat",
    "kittygame"
]
resolver = "2"

# Make output binaries extra small
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*