
[workspace]
members = [
    "macroquad_plat",
    "wasm4_plat",
    "bevy_plat",
    "kittygame",
]
default-members = [
    "macroquad_plat",
    "kittygame"
]
resolver = "2"

# Make output binaries extra small
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1