[package]
name = "bevy_plat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy={version="0.13", features=["dynamic_linking"]}

[dependencies]
kittygame = {path = "../kittygame"}
bevy= {version = "0.13"}
bevy_framepace={version="0.15"}
# bytemuck={version="1.14"}
